--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="apple-touch-icon-precomposed" href="images/favicon.ico">
   <meta name="msapplication-TileColor" content="#FFFFFF">
   <meta name="msapplication-TileImage" content="images/favicon.ico">
-  <link rel="icon" href="images/favicon.ico" sizes="32x32">
+  <link rel="icon" href="images/favicon.ico" sizes="32x32" alt="images/faviconCopy.jpg">
   <link rel="shortcut icon" sizes="196x196" href="images/favicon.ico">
 
   <!-- CSS  -->
