--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 <body>
   <nav class="light-blue lighten-1" role="navigation">
     <div class="nav-wrapper container"><img src="images/nate.jpg" class="circle responsive-img"/>
-      <ul class="right hide-on-med-and-down">
+      <ul class="right hide-on-med-and-down normal">
         <li><a href="https://www.linkedin.com/in/nathanwkong/">LinkedIn</a></li>
         <li><a href="https://www.github.com/natekong/">GitHub</a></li>
         <li><a href="#">NateWKong@gmail.com</a></li>
       </ul>
 
-      <ul id="nav-mobile" class="side-nav orange lighten-2 white-text">
+      <ul id="nav-mobile" class="side-nav orange lighten-2 white-text normal">
         <li><a href="https://www.linkedin.com/in/nathanwkong/">LinkedIn</a></li>
         <li><a href="https://www.github.com/natekong/">GitHub</a></li>
         <li><a href="#">NateWKong@gmail.com</a></li>
@@ -69,29 +69,49 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">desktop_windows</i></h2>
-            <h5 class="center">Computer Science</h5>
-
-            <p class="light">Currently pursing a Masters in Computer Science at San Jose State University</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">account_balance</i></h2>
-            <h5 class="center">FindLaw</h5>
+            <h5 class="center">FindLaw<br>(Internship)</h5>
 
-            <p class="light">Intern for www.FindLaw.com<br>Migration of Content to Adobe AEM (CQ 5.6.1) through creation of webpages and components<br>Redirection of Legacy Domains</p>
-			<p class="light">Tools: JIRA, Perforce, Eclipse, CRXDE</p>
+            <p class="light">
+              <ul class="experience" >
+                <li>Migration of Content to Adobe CQ 5.6.1.</li>
+                <li>Creation of web pages and components.</li>
+                <li>Redirection of Legacy Domains.
+                <li>Project coordinating.</li>
+              </ul>
+            </p>
+            <p class="light">JIRA, Perforce, Eclipse, CRXDE, Adobe CQ</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Mechanical Engineering</h5>
+            <h2 class="center light-blue-text"><i class="material-icons">desktop_windows</i></h2>
+            <h5 class="center">Computer Science<br>(Degree)</h5>
 
-            <p class="light">Gradated Bachlors of Science: Mechanical Engineering, Minor: Business, San Jose State University, 2007</p>
+            <p class="light">
+              <ul class="experience" >
+                <li>Pursing a Masters in Computer Science.</li>
+                <li>San Jose State University.</li>
+                <li>Graduation date May 2017.</li>
+              </ul>
+            </p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+                        <h2 class="center light-blue-text"><i class="material-icons">terrain</i></h2>
+            <h5 class="center">CB&ampI<br>(Project Engineer)</h5>
+
+            <p class="light">
+              <ul class="experience" >
+                <li>Project coordinating.</li>
+                <li>System design, commissioning, troubleshooting, and operations of treatment systems.</li>
+                <li>Testing and troubleshooting of logic controllers and control systems.</li>
+                <li>Development of operation manuals.</li>
+              </ul>
+            </p>
           </div>
         </div>
       </div>
@@ -100,14 +120,19 @@
 	  <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">terrain</i></h2>
-            <h5 class="center">CB&ampI</h5>
+            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+            <h5 class="center">Mechanical Engineering<br>(Degree)</h5>
 
-            <p class="light">Project Engineer <br>System design, commissioning, troubleshooting, and operations of treatment systems<br>Tesing and Troubleshooting of logic controllers and control systems<br>Development of operation manuals</p>
+            <p class="light">
+              <ul class="experience" >
+                <li>Bachelors of Science in Mechanical Engineering.</li>
+                <li>Minor in Business.</li>
+                <li>San Jose State University.</li>
+                <li>Graduated 2007.</li>
+              </ul>
+            </p>
           </div>
-        </div>
-
-        
+        </div>        
       </div>
 	</div>
   </div>
@@ -116,6 +141,37 @@
   <div class="indigo accent-3 white-text">
 	  <div class="container">	
 		<div class="section">
+      <div class="row">
+      <div class="col s12 m4">
+        <div class="icon-block">
+        <h2 class="center light-blue-text"><i class="material-icons">device_hub</i></h2>
+        <h5 class="center">Failover Mechanism for Distributed SDN Controllers<br>(Master's Project)</h5>
+
+        <p class="light">(In Progress) Failure detection and recover for SDN controllers in a distributed architecture.</p>
+        <p class="light">Java</p>
+        </div>
+      </div>
+
+      <div class="col s12 m4">
+        <div class="icon-block">
+        <h2 class="center light-blue-text"><i class="material-icons">line_weight</i></h2>
+        <h5 class="center">Quality of Service for Containers in Cloud Computing</h5>
+
+        <p class="light">Simulated Containers in Cloud Computing. Created QoS priorities for each container. Dynamically adjusted bandwidth for containers.</p>
+        <p class="light">Java, CloudSim, GitHub, Slack</p>
+        </div>
+      </div>
+
+      <div class="col s12 m4">
+        <div class="icon-block">
+        <h2 class="center light-blue-text"><i class="material-icons">network_check</i></h2>
+        <h5 class="center">SDN for LTE</h5>
+
+        <p class="light">Simulated a 5G LTE architecture with a Software Defined Network. Created UEs, eNodeBs, and an EPC. Demonstrated dynamic QoS provisioning using SDN controllers for eNodeBs. </p>
+        <p class="light">Java, SimULTE, OMNet++, GitHub, Slack</p>
+        </div>
+      </div>
+      </div>
 		  <div class="row">
 			<div class="col s12 m4">
 			  <div class="icon-block">
@@ -123,7 +179,7 @@
 				<h5 class="center">Aeris-SJSU IoT: Simple Bottle</h5>
 
 				<p class="light">Smart pill bottle to help with prescription drug abuse. Used Tessel 1 board to simulate pill bottle. Bottle sends information to the cloud. Website for doctor to view logs of pill use.</p>
-				<p class="light">Tessel 1, node.js, html, css, javascript, AerCloud(Aeris)</p>
+				<p class="light">Tessel 1, node.js, html, css, javascript, AerCloud (Aeris)</p>
 			  </div>
 			</div>
 
@@ -153,7 +209,7 @@
 				<h2 class="center light-blue-text"><i class="material-icons">devices_other</i></h2>
 				<h5 class="center">Project Tracking Software</h5>
 
-				<p class="light">A SaaS for project tracking of line items and associated materials</p>
+				<p class="light">A SaaS for project tracking of line items and associated materials.</p>
 				<p class="light">HTML, CSS, Javascript</p>
 			  </div>
 			</div>
@@ -163,7 +219,7 @@
 				<h2 class="center light-blue-text"><i class="material-icons">android</i></h2>
 				<h5 class="center">IntTips</h5>
 
-				<p class="light">A simple tip calculator built for Android. It rounds the integer values for any percentage tip. The default is 15% and 18%</p>
+				<p class="light">A simple tip calculator built for Android. It rounds the integer values for any percentage tip. The default is 15% and 18%.</p>
 				<p class="light">Android, Java</p>
 			  </div>
 			</div>
@@ -172,7 +228,7 @@
 			  <div class="icon-block">
 				<h2 class="center light-blue-text"><i class="material-icons">call</i></h2>
 				<h5 class="center">P2P chat</h5>
-				<p class="light">P2P chat application send info to STUN server through UDP and connects to peer through TCP</p>
+				<p class="light">A Peer-to-Peer chat application.  The chat sends information to a STUN server through UDP.  The STUN server connects peers through TCP.</p>
 				<p class="light">Java</p>
 			  </div>
 			</div>
@@ -186,17 +242,14 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Languages, IDEs, Etc.</h5>
-          <p class="grey-text text-lighten-4">Java, C, Android, html, css, Javascript, Android Studio, Github, codeblocks, eclipse, ModelSim, ladder logic, SCADA, gitHub, bitBucket, JIRA, Agile, Adobe CQ, Perforce(P4)</p>
-
-
         </div>
         <div class="col l3 s12">
           <h5 class="white-text">Additional Information</h5>
-          <ul>
-		    <li><a class="white-text" href="http://www.linkedin.com/in/nathanwkong/">Linkedin</a></li>
+          <ul class="normal">
+		        <li><a class="white-text" href="http://www.linkedin.com/in/nathanwkong/">Linkedin</a></li>
             <li><a class="white-text" href="http://www.github.com/natekong/">GitHub</a></li>
-			<li><a href="#">NateWKong@gmail.com</a></li>
+			      <li><a href="Nathan_Kong_Resume.pdf">Resume (PDF)</a></li>
+            <li class="white-text">NateWKong@gmail.com</li>
           </ul>
         </div>
       </div>
