added papers for projects

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <div class="container topPad">
     <div class="section">
 
-      <!--   Row1   -->
+      <!--   EXPERIENCE   -->
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
@@ -152,23 +152,27 @@
         </div>
       </div>
 
-      <div class="col s12 m4">
+      <div class="col s12 m4 link">
         <div class="icon-block">
+        <a class="white-text" href="papers/QoS_Containers.pdf">
         <h2 class="center light-blue-text"><i class="material-icons">line_weight</i></h2>
         <h5 class="center">Quality of Service for Containers in Cloud Computing</h5>
 
         <p class="light">Simulated Containers in Cloud Computing. Created QoS priorities for each container. Dynamically adjusted bandwidth for containers.</p>
         <p class="light">Java, CloudSim, GitHub, Slack</p>
+        </a>
         </div>
       </div>
 
-      <div class="col s12 m4">
+      <div class="col s12 m4 link">
         <div class="icon-block">
+        <a class="white-text" href="papers/SDN_LTE.pdf">
         <h2 class="center light-blue-text"><i class="material-icons">network_check</i></h2>
         <h5 class="center">SDN for LTE</h5>
 
         <p class="light">Simulated a 5G LTE architecture with a Software Defined Network. Created UEs, eNodeBs, and an EPC. Demonstrated dynamic QoS provisioning using SDN controllers for eNodeBs. </p>
         <p class="light">Java, SimULTE, OMNet++, GitHub, Slack</p>
+        </a>
         </div>
       </div>
       </div>
