--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	  <div class="container">
 		<h1 class="header center orange-text">Nathan Kong</h1>
 		<div class="row center orange-text">
-		  <h5 class="header col s12 light">Trying to make peoples lives easier through technology</h5>
+		  <h5 class="header col s12 light">Improving people's lives through technology</h5>
 	    </div>
 	  </div>
 	</div>
