--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
     
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot" >
-	  <div class="container">
-		<h1 class="header center orange-text">Nathan Kong</h1>
-		<div class="row center orange-text">
-		  <h5 class="header col s12 light">Improving people's lives through technology</h5>
+  	  <div class="container">
+    		<h1 class="header center orange-text">Nathan Kong</h1>
+    		<div class="row center orange-text">
+    		  <h5 class="header col s12 light">Improving people's lives through technology</h5>
+    	  </div>
 	    </div>
 	  </div>
-	</div>
-	<div class="parallax">
-		<img src="images/back.jpg" style="display: block; transform: translate3d(-50%, 315px, 0px);">
-	</div>
+  	<div class="parallax">
+  		<img src="images/back.jpg" style="display: block; transform: translate3d(-50%, 315px, 0px);">
+  	</div>
   </div>
   
   <div class="container topPad">
@@ -69,15 +69,30 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">school</i></h2>
+            <h5 class="center">SJSU<br>(Teaching Assistant)</h5>
+
+            <p class="light">
+              <ul class="experience" >
+                <li>Class: Topics in Wireless Mobile Networking (CS 268) Spring 2017.</li>
+                <li>Development, instruction, and grading of laboratory assignments.</li>
+              </ul>
+            </p>
+            <p class="light">VirtualBox, Mininet, OpenDayLight, NS3, Docker, Nutanix, Slack</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">account_balance</i></h2>
             <h5 class="center">FindLaw<br>(Internship)</h5>
 
             <p class="light">
               <ul class="experience" >
-                <li>Migration of Content to Adobe CQ 5.6.1.</li>
-                <li>Creation of web pages and components.</li>
-                <li>Redirection of Legacy Domains.
                 <li>Project coordinating.</li>
+                <li>Migration of web content to Adobe CQ 5.6.1.</li>
+                <li>Development of web page and components.</li>
+                <li>Redirection of Legacy Domains.</li>
               </ul>
             </p>
             <p class="light">JIRA, Perforce, Eclipse, CRXDE, Adobe CQ</p>
@@ -91,7 +106,7 @@
 
             <p class="light">
               <ul class="experience" >
-                <li>Pursing a Masters in Computer Science.</li>
+                <li>Currently pursing a Masters in Computer Science.</li>
                 <li>San Jose State University.</li>
                 <li>Graduation date May 2017.</li>
               </ul>
@@ -99,14 +114,18 @@
           </div>
         </div>
 
+      </div>
+	  
+	    <!-- Experience Row 2-->
+      <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-                        <h2 class="center light-blue-text"><i class="material-icons">terrain</i></h2>
+            <h2 class="center light-blue-text"><i class="material-icons">terrain</i></h2>
             <h5 class="center">CB&ampI<br>(Project Engineer)</h5>
 
             <p class="light">
               <ul class="experience" >
-                <li>Project coordinating.</li>
+                <li>On-Site project management.</li>
                 <li>System design, commissioning, troubleshooting, and operations of treatment systems.</li>
                 <li>Testing and troubleshooting of logic controllers and control systems.</li>
                 <li>Development of operation manuals.</li>
@@ -114,10 +133,7 @@
             </p>
           </div>
         </div>
-      </div>
-	  
-	  <!-- Row2-->
-	  <div class="row">
+
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
@@ -134,112 +150,116 @@
           </div>
         </div>        
       </div>
-	</div>
+	  </div>
   </div>
   
   <!--Projects-->
   <div class="indigo accent-3 white-text">
 	  <div class="container">	
-		<div class="section">
-      <div class="row">
-      <div class="col s12 m4">
-        <div class="icon-block">
-        <h2 class="center light-blue-text"><i class="material-icons">device_hub</i></h2>
-        <h5 class="center">Failover Mechanism for Distributed SDN Controllers<br>(Master's Project)</h5>
+  		<div class="section">
+        <!--projects row 1-->
+        <div class="row">
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <h2 class="center light-blue-text"><i class="material-icons">device_hub</i></h2>
+              <h5 class="center">Failover Mechanism for Distributed SDN Controllers<br>(Master's Project)</h5>
 
-        <p class="light">(In Progress) Failure detection and recover for SDN controllers in a distributed architecture.</p>
-        <p class="light">Java</p>
+              <p class="light">(In Progress) Failure detection and recover for SDN controllers in a distributed architecture.</p>
+              <p class="light">Java</p>
+            </div>
+          </div>
+
+          <div class="col s12 m4 link">
+            <div class="icon-block">
+              <a class="white-text" href="papers/QoS_Containers.pdf">
+              <h2 class="center light-blue-text"><i class="material-icons">line_weight</i></h2>
+              <h5 class="center">Quality of Service for Containers in Cloud Computing</h5>
+
+              <p class="light">Simulated Containers in Cloud Computing. Created QoS priorities for each container. Dynamically adjusted bandwidth for containers.</p>
+              <p class="light">Java, CloudSim, GitHub, Slack</p>
+              </a>
+            </div>
+          </div>
+
+          <div class="col s12 m4 link">
+            <div class="icon-block">
+              <a class="white-text" href="papers/SDN_LTE.pdf">
+              <h2 class="center light-blue-text"><i class="material-icons">network_check</i></h2>
+              <h5 class="center">SDN for LTE</h5>
+
+              <p class="light">Simulated a 5G LTE architecture with a Software Defined Network. Created UEs, eNodeBs, and an EPC. Demonstrated dynamic QoS provisioning using SDN controllers for eNodeBs. </p>
+              <p class="light">Java, SimULTE, OMNet++, GitHub, Slack</p>
+              </a>
+            </div>
+          </div>
         </div>
-      </div>
 
-      <div class="col s12 m4 link">
-        <div class="icon-block">
-        <a class="white-text" href="papers/QoS_Containers.pdf">
-        <h2 class="center light-blue-text"><i class="material-icons">line_weight</i></h2>
-        <h5 class="center">Quality of Service for Containers in Cloud Computing</h5>
+        <!--projects row 2-->
+  		  <div class="row">
+    			<div class="col s12 m4">
+      			  <div class="icon-block">
+      				<h2 class="center light-blue-text"><i class="material-icons">developer_board</i></h2>
+      				<h5 class="center">Aeris-SJSU IoT: Simple Bottle</h5>
 
-        <p class="light">Simulated Containers in Cloud Computing. Created QoS priorities for each container. Dynamically adjusted bandwidth for containers.</p>
-        <p class="light">Java, CloudSim, GitHub, Slack</p>
-        </a>
-        </div>
-      </div>
+      				<p class="light">Smart pill bottle to help with prescription drug abuse. Used Tessel 1 board to simulate pill bottle. Bottle sends information to the cloud. Website for doctor to view logs of pill use.</p>
+      				<p class="light">Tessel 1, node.js, html, css, javascript, AerCloud (Aeris)</p>
+    			  </div>
+    			</div>
 
-      <div class="col s12 m4 link">
-        <div class="icon-block">
-        <a class="white-text" href="papers/SDN_LTE.pdf">
-        <h2 class="center light-blue-text"><i class="material-icons">network_check</i></h2>
-        <h5 class="center">SDN for LTE</h5>
+    			<div class="col s12 m4">
+    			  <div class="icon-block">
+      				<h2 class="center light-blue-text"><i class="material-icons">router</i></h2>
+      				<h5 class="center">Software Defined Wireless Sensor Network</h5>
 
-        <p class="light">Simulated a 5G LTE architecture with a Software Defined Network. Created UEs, eNodeBs, and an EPC. Demonstrated dynamic QoS provisioning using SDN controllers for eNodeBs. </p>
-        <p class="light">Java, SimULTE, OMNet++, GitHub, Slack</p>
-        </a>
-        </div>
-      </div>
-      </div>
-		  <div class="row">
-			<div class="col s12 m4">
-			  <div class="icon-block">
-				<h2 class="center light-blue-text"><i class="material-icons">developer_board</i></h2>
-				<h5 class="center">Aeris-SJSU IoT: Simple Bottle</h5>
+      				<p class="light">Simulated a Software defined wireless sensor network for a healthcare network.</p>
+      				<p class="light">NS-3, mininet </p>
+    			  </div>
+    			</div>
 
-				<p class="light">Smart pill bottle to help with prescription drug abuse. Used Tessel 1 board to simulate pill bottle. Bottle sends information to the cloud. Website for doctor to view logs of pill use.</p>
-				<p class="light">Tessel 1, node.js, html, css, javascript, AerCloud (Aeris)</p>
-			  </div>
-			</div>
+    			<div class="col s12 m4">
+    			  <div class="icon-block">
+      				<h2 class="center light-blue-text"><i class="material-icons">format_size</i></h2>
+      				<h5 class="center">Frequent Itemsets</h5>
 
-			<div class="col s12 m4">
-			  <div class="icon-block">
-				<h2 class="center light-blue-text"><i class="material-icons">router</i></h2>
-				<h5 class="center">Software Defined Wireless Sensor Network</h5>
+      				<p class="light">Simulated a frequent itemset algorithm in a sliding window for infinite data</p>
+      				<p class="light">Apache Spark</p>
+    			  </div>
+    			</div>
+  		  </div>
 
-				<p class="light">Simulated a Software defined wireless sensor network for a healthcare network.</p>
-				<p class="light">NS-3, mininet </p>
-			  </div>
-			</div>
+        <!--projects row 3-->
+  		  <div class="row">
+    			<div class="col s12 m4">
+    			  <div class="icon-block">
+    				<h2 class="center light-blue-text"><i class="material-icons">devices_other</i></h2>
+    				<h5 class="center">Project Tracking Software</h5>
 
-			<div class="col s12 m4">
-			  <div class="icon-block">
-				<h2 class="center light-blue-text"><i class="material-icons">format_size</i></h2>
-				<h5 class="center">Frequent Itemsets</h5>
+    				<p class="light">A SaaS for project tracking of line items and associated materials.</p>
+    				<p class="light">HTML, CSS, Javascript</p>
+    			  </div>
+    			</div>
 
-				<p class="light">Simulated a frequent itemset algorithm in a sliding window for infinite data</p>
-				<p class="light">Apache Spark</p>
-			  </div>
-			</div>
-		  </div>
-		  <div class="row">
-			<div class="col s12 m4">
-			  <div class="icon-block">
-				<h2 class="center light-blue-text"><i class="material-icons">devices_other</i></h2>
-				<h5 class="center">Project Tracking Software</h5>
+    			<div class="col s12 m4">
+    			  <div class="icon-block">
+    				<h2 class="center light-blue-text"><i class="material-icons">android</i></h2>
+    				<h5 class="center">IntTips</h5>
 
-				<p class="light">A SaaS for project tracking of line items and associated materials.</p>
-				<p class="light">HTML, CSS, Javascript</p>
-			  </div>
-			</div>
+    				<p class="light">A simple tip calculator built for Android. It rounds the integer values for any percentage tip. The default is 15% and 18%.</p>
+    				<p class="light">Android, Java</p>
+    			  </div>
+    			</div>
 
-			<div class="col s12 m4">
-			  <div class="icon-block">
-				<h2 class="center light-blue-text"><i class="material-icons">android</i></h2>
-				<h5 class="center">IntTips</h5>
-
-				<p class="light">A simple tip calculator built for Android. It rounds the integer values for any percentage tip. The default is 15% and 18%.</p>
-				<p class="light">Android, Java</p>
-			  </div>
-			</div>
-
-			<div class="col s12 m4">
-			  <div class="icon-block">
-				<h2 class="center light-blue-text"><i class="material-icons">call</i></h2>
-				<h5 class="center">P2P chat</h5>
-				<p class="light">A Peer-to-Peer chat application.  The chat sends information to a STUN server through UDP.  The STUN server connects peers through TCP.</p>
-				<p class="light">Java</p>
-			  </div>
-			</div>
-		  </div>
-		</div>
+    			<div class="col s12 m4">
+    			  <div class="icon-block">
+    				<h2 class="center light-blue-text"><i class="material-icons">call</i></h2>
+    				<h5 class="center">P2P chat</h5>
+    				<p class="light">A Peer-to-Peer chat application.  The chat sends information to a STUN server through UDP.  The STUN server connects peers through TCP.</p>
+    				<p class="light">Java</p>
+    			  </div>
+    			</div>
+  		  </div>
+  		</div>
 	  </div>
-    </div>
   </div>
 
   <footer class="orange topPad">
@@ -265,5 +285,5 @@
     </div>
   </footer>
 
-  </body>
+</body>
 </html>
