--- a/zachary/index.html
+++ b/zachary/index.html
@@ -8,7 +8,7 @@
   <link rel="apple-touch-icon-precomposed" href="images/favicon.ico">
   <meta name="msapplication-TileColor" content="#FFFFFF">
   <meta name="msapplication-TileImage" content="images/favicon.ico">
-  <link rel="icon" href="images/favicon.ico" sizes="32x32" alt="images/faviconCopy.jpg">
+  <link rel="icon" href="images/favicon.ico" sizes="32x32">
   <link rel="shortcut icon" sizes="196x196" href="images/favicon.ico">
 
   <!-- CSS  -->
@@ -32,7 +32,7 @@
 </head>
 <body>
   <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><img src="images/nate.jpg" class="circle responsive-img"/>
+    <div class="nav-wrapper container"><img src="images/zw.png" class="circle responsive-img"/>
       <ul class="right hide-on-med-and-down normal">
         <!--<li><a href="#">email@gmail.com</a></li>-->
       </ul>
