added Nutanix cloud

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <li>Development, instruction, and grading of laboratory assignments.</li>
               </ul>
             </p>
-            <p class="light">VirtualBox, Mininet, OpenDayLight, NS3, Docker, Nutanix, Slack</p>
+            <p class="light">VirtualBox, Mininet, OpenDayLight, NS3, Docker, Nutanix Cloud, Slack</p>
           </div>
         </div>
 
