added masters paper

--- a/index.html
+++ b/index.html
@@ -159,13 +159,15 @@
   		<div class="section">
         <!--projects row 1-->
         <div class="row">
-          <div class="col s12 m4">
+          <div class="col s12 m4 link">
             <div class="icon-block">
+              <a class="white-text" href="papers/distributed_SDN_failover.pdf">
               <h2 class="center light-blue-text"><i class="material-icons">device_hub</i></h2>
               <h5 class="center">Failover Mechanism for Distributed SDN Controllers<br>(Master's Project)</h5>
 
-              <p class="light">(In Progress) Failure detection and recover for SDN controllers in a distributed architecture.</p>
+              <p class="light">Failure detection and recover for SDN controllers in a distributed architecture.</p>
               <p class="light">Java</p>
+              </a>
             </div>
           </div>
 
