--- a/index.html
+++ b/index.html
@@ -21,12 +21,19 @@
   
   
   <!--  Scripts-->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+  <script src="js/projects.js" type="text/javascript"></script>
   <script>
 	$(document).ready(function(){
 		$('.parallax').parallax();
+    
+    $.getJSON( "js/projects.json", function( data ) {
+      document.getElementById("projects").innerHTML = getProjects(data);
+    }).fail(function(d, textStatus, error) {
+      document.getElementById("projects").innerHTML = "error";
+      console.error("getJSON failed, status: " + textStatus + ", error: "+ error)
+    });
 	});
   </script>
 </head>
@@ -64,9 +71,10 @@
   
   <div class="container topPad">
     <div class="section">
-
+      <h1 class="center">Experience</h1>
       <!--   EXPERIENCE   -->
       <div class="row">
+
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">school</i></h2>
@@ -157,109 +165,9 @@
   <div class="indigo accent-3 white-text">
 	  <div class="container">	
   		<div class="section">
-        <!--projects row 1-->
-        <div class="row">
-          <div class="col s12 m4 link">
-            <div class="icon-block">
-              <a class="white-text" href="papers/distributed_SDN_failover.pdf">
-              <h2 class="center light-blue-text"><i class="material-icons">device_hub</i></h2>
-              <h5 class="center">Failover Mechanism for Distributed SDN Controllers<br>(Master's Project)</h5>
-
-              <p class="light">Failure detection and recover for SDN controllers in a distributed architecture.</p>
-              <p class="light">Java</p>
-              </a>
-            </div>
-          </div>
-
-          <div class="col s12 m4 link">
-            <div class="icon-block">
-              <a class="white-text" href="papers/QoS_Containers.pdf">
-              <h2 class="center light-blue-text"><i class="material-icons">line_weight</i></h2>
-              <h5 class="center">Quality of Service for Containers in Cloud Computing</h5>
-
-              <p class="light">Simulated Containers in Cloud Computing. Created QoS priorities for each container. Dynamically adjusted bandwidth for containers.</p>
-              <p class="light">Java, CloudSim, GitHub, Slack</p>
-              </a>
-            </div>
-          </div>
-
-          <div class="col s12 m4 link">
-            <div class="icon-block">
-              <a class="white-text" href="papers/SDN_LTE.pdf">
-              <h2 class="center light-blue-text"><i class="material-icons">network_check</i></h2>
-              <h5 class="center">SDN for LTE</h5>
-
-              <p class="light">Simulated a 5G LTE architecture with a Software Defined Network. Created UEs, eNodeBs, and an EPC. Demonstrated dynamic QoS provisioning using SDN controllers for eNodeBs. </p>
-              <p class="light">Java, SimULTE, OMNet++, GitHub, Slack</p>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <!--projects row 2-->
-  		  <div class="row">
-    			<div class="col s12 m4">
-      			  <div class="icon-block">
-      				<h2 class="center light-blue-text"><i class="material-icons">developer_board</i></h2>
-      				<h5 class="center">Aeris-SJSU IoT: Simple Bottle</h5>
-
-      				<p class="light">Smart pill bottle to help with prescription drug abuse. Used Tessel 1 board to simulate pill bottle. Bottle sends information to the cloud. Website for doctor to view logs of pill use.</p>
-      				<p class="light">Tessel 1, node.js, html, css, javascript, AerCloud (Aeris)</p>
-    			  </div>
-    			</div>
-
-    			<div class="col s12 m4">
-    			  <div class="icon-block">
-      				<h2 class="center light-blue-text"><i class="material-icons">router</i></h2>
-      				<h5 class="center">Software Defined Wireless Sensor Network</h5>
-
-      				<p class="light">Simulated a Software defined wireless sensor network for a healthcare network.</p>
-      				<p class="light">NS-3, mininet </p>
-    			  </div>
-    			</div>
-
-    			<div class="col s12 m4">
-    			  <div class="icon-block">
-      				<h2 class="center light-blue-text"><i class="material-icons">format_size</i></h2>
-      				<h5 class="center">Frequent Itemsets</h5>
-
-      				<p class="light">Simulated a frequent itemset algorithm in a sliding window for infinite data</p>
-      				<p class="light">Apache Spark</p>
-    			  </div>
-    			</div>
-  		  </div>
-
-        <!--projects row 3-->
-  		  <div class="row">
-    			<div class="col s12 m4">
-    			  <div class="icon-block">
-    				<h2 class="center light-blue-text"><i class="material-icons">devices_other</i></h2>
-    				<h5 class="center">Project Tracking Software</h5>
-
-    				<p class="light">A SaaS for project tracking of line items and associated materials.</p>
-    				<p class="light">HTML, CSS, Javascript</p>
-    			  </div>
-    			</div>
-
-    			<div class="col s12 m4">
-    			  <div class="icon-block">
-    				<h2 class="center light-blue-text"><i class="material-icons">android</i></h2>
-    				<h5 class="center">IntTips</h5>
-
-    				<p class="light">A simple tip calculator built for Android. It rounds the integer values for any percentage tip. The default is 15% and 18%.</p>
-    				<p class="light">Android, Java</p>
-    			  </div>
-    			</div>
-
-    			<div class="col s12 m4">
-    			  <div class="icon-block">
-    				<h2 class="center light-blue-text"><i class="material-icons">call</i></h2>
-    				<h5 class="center">P2P chat</h5>
-    				<p class="light">A Peer-to-Peer chat application.  The chat sends information to a STUN server through UDP.  The STUN server connects peers through TCP.</p>
-    				<p class="light">Java</p>
-    			  </div>
-    			</div>
-  		  </div>
+      <h1 class="center">Projects</h1>
+        <span id='projects'></span>
+      
   		</div>
 	  </div>
   </div>
