--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   
   <div class="container topPad">
     <div class="section">
-      <h1 class="center">Experience</h1>
+      <h3 class="center">EXPERIENCE</h3>
       <!--   EXPERIENCE   -->
       <div class="row">
 
@@ -165,7 +165,7 @@
   <div class="indigo accent-3 white-text">
 	  <div class="container">	
   		<div class="section">
-      <h1 class="center">Projects</h1>
+      <h3 class="center">PROJECTS</h3>
         <span id='projects'></span>
       
   		</div>
