removed template info

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
   <footer class="orange topPad">
     <div class="container">
-      <div class="row">
+      <div class="row" style="margin-bottom: 0px">
         <div class="col l6 s12">
         </div>
         <div class="col l3 s12">
@@ -186,11 +186,6 @@
             <li class="white-text">NateWKong@gmail.com</li>
           </ul>
         </div>
-      </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
-      Template by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
       </div>
     </div>
   </footer>
