--- a/index.html
+++ b/index.html
@@ -77,21 +77,6 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">school</i></h2>
-            <h5 class="center">SJSU<br>(Teaching Assistant)</h5>
-
-            <p class="light">
-              <ul class="experience" >
-                <li>Class: Topics in Wireless Mobile Networking (CS 268) Spring 2017.</li>
-                <li>Development, instruction, and grading of laboratory assignments.</li>
-              </ul>
-            </p>
-            <p class="light">VirtualBox, Mininet, OpenDayLight, NS3, Docker, Nutanix Cloud, Slack</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">account_balance</i></h2>
             <h5 class="center">FindLaw<br>(Internship)</h5>
 
@@ -104,6 +89,21 @@
               </ul>
             </p>
             <p class="light">JIRA, Perforce, Eclipse, CRXDE, Adobe CQ</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">school</i></h2>
+            <h5 class="center">SJSU<br>(Teaching Assistant)</h5>
+
+            <p class="light">
+              <ul class="experience" >
+                <li>Class: Topics in Wireless Mobile Networking (CS 268) Spring 2017.</li>
+                <li>Development, instruction, and grading of laboratory assignments.</li>
+              </ul>
+            </p>
+            <p class="light">Docker, Nutanix Cloud, Slack, VirtualBox, Mininet, OpenDayLight, NS3</p>
           </div>
         </div>
 
