--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 
             <p class="light">
               <ul class="experience" >
-                <li>Currently pursing a Masters in Computer Science.</li>
-                <li>San Jose State University.</li>
-                <li>Graduation date May 2017.</li>
+                <li>Masters in Computer Science</li>
+                <li>San Jose State University</li>
+                <li>May 2017</li>
               </ul>
             </p>
           </div>
@@ -149,10 +149,10 @@
 
             <p class="light">
               <ul class="experience" >
-                <li>Bachelors of Science in Mechanical Engineering.</li>
-                <li>Minor in Business.</li>
-                <li>San Jose State University.</li>
-                <li>Graduated 2007.</li>
+                <li>Bachelors in Mechanical Engineering</li>
+                <li>Minor in Business</li>
+                <li>San Jose State University</li>
+                <li>May 2007</li>
               </ul>
             </p>
           </div>
