--- a/treemap/index.html
+++ b/treemap/index.html
@@ -15,14 +15,19 @@
     </style>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript" src="treemap.js"></script>
+    <script type="text/javascript">
+      window.onload = function(){
+        alert('Click the Elements to learn more about me\n'
+          + 'Hover to learn about the details\n'
+          + 'Right click to traverse back'
+          );
+      }
+    </script>
   </head>
   <body>
     <div id="treemap"></div>
     <script>
-      alert('Click the Elements to learn more about me\n'
-        + 'Hover to learn about the details\n'
-        + 'Right click to traverse back'
-        );  
+
     </script>
   </body>
 </html>
