--- a/treemap/index.html
+++ b/treemap/index.html
@@ -13,15 +13,20 @@
         margin: 0;
       }
     </style>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
+      crossorigin="anonymous">
+    </script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript" src="treemap.js"></script>
     <script type="text/javascript">
-      window.onload = function(){
+      $(document).ready(function(){
         alert('Click the Elements to learn more about me\n'
           + 'Hover to learn about the details\n'
           + 'Right click to traverse back'
           );
-      }
+      });
     </script>
   </head>
   <body>
