added meta data and favicon

--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+    <title>Nathan Kong</title>
+    
+    <link rel="apple-touch-icon-precomposed" href="resume/images/favicon.ico">
+    <meta name="msapplication-TileColor" content="#FFFFFF">
+    <meta name="msapplication-TileImage" content="resume/images/favicon.ico">
+    <link rel="icon" href="resume/images/favicon.ico" sizes="32x32">
+    <link rel="shortcut icon" sizes="196x196" href="resume/images/favicon.ico">
 	<style>
 		body{
 			margin: 0;
