--- a/timeline/index.html
+++ b/timeline/index.html
@@ -1,6 +1,14 @@
 <html>
   <head>
-	<title>Timeline</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+    <title>Timeline</title>
+    
+    <link rel="apple-touch-icon-precomposed" href="../resume/images/favicon.ico">
+    <meta name="msapplication-TileColor" content="#FFFFFF">
+    <meta name="msapplication-TileImage" content="../resume/images/favicon.ico">
+    <link rel="icon" href="../resume/images/favicon.ico" sizes="32x32">
+    <link rel="shortcut icon" sizes="196x196" href="../resume/images/favicon.ico">
     <style>
       body{
         width: 100%;
@@ -45,7 +53,7 @@
   </head>
   <body style="background-color: #4885ed;">
     <h1>Nathan Kong's Timeline</h1>
-    <noscript>Please enable Javascript</noscript>
+    <noscript>This page requires Javascript</noscript>
     <div id="timeline1" class="line"></div>
     <div id="timeline2" class="line"></div>
     <div id="screen">This requires a landscape view</div>
