--- a/treemap/index.html
+++ b/treemap/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <div id="treemap"></div>
-    
+    <noscript>This page requires Javascript</noscript>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
