--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 		div{
 			display: inline;
 			width: 33.33%;
-			height: 100%;
+			min-height: 500px;
+			max-height: 100%;
 			float:left;
 			display: flex;
 			justify-content: center;
