alert for moblie

--- a/treemap/index.html
+++ b/treemap/index.html
@@ -38,7 +38,8 @@
       $(document).ready(function(){
         alert('Click the Elements to learn more about me\n'
           + 'Hover to learn about the details\n'
-          + 'Right click to traverse back'
+          + 'Right click to traverse back\n'
+          + 'This does not work on touch screens'
           );
       });
     </script>
