--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			display: inline;
 			width: 33.33%;
 			min-height: 500px;
-			max-height: 100%;
+			height: 100%;
 			float:left;
 			display: flex;
 			justify-content: center;
