added supervisor to resume and edit css for job titles

--- a/resume/index.html
+++ b/resume/index.html
@@ -60,7 +60,7 @@
   	  <div class="container">
     		<h1 class="header center orange-text">Nathan Kong</h1>
     		<div class="row center orange-text">
-    		  <h5 class="header col s12 light">Improving people's lives through technology</h5>
+    		  <h5 class="header col s12 light">Always Evolving</h5>
     	  </div>
 	    </div>
 	  </div>
@@ -74,11 +74,32 @@
       <h3 class="center">EXPERIENCE</h3>
       <!--   EXPERIENCE   -->
       <div class="row">
+        
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">assignment_turned_in</i></h2>
+            <h5 class="center">Insight Global</h5>
+            <p class="title">Engineering Supervisor</p>
+
+            <p class="light">
+              <ul class="experience" >
+                <li>Compliance of Gas Assets for PG&ampE</li>
+                <li>Validation of Assets in SAP</li>
+                <li>Main Point of Contact with PG&ampE AMBBS Data Clean Supervisor</li>
+                <li>Coordination and organization of team schedules</li>
+                <li>Development of reports, project guides, and project charter</li>
+                <li>Leadership development</li>
+              </ul>
+            </p>
+            <p class="light">MS Project, Visio, Zoom, SAP, ProntoForms</p>
+          </div>
+        </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">account_balance</i></h2>
-            <h5 class="center">FindLaw<br>(Internship)</h5>
+            <h5 class="center">FindLaw</h5>
+            <p class="title">Internship</p>
 
             <p class="light">
               <ul class="experience" >
@@ -95,7 +116,8 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">school</i></h2>
-            <h5 class="center">SJSU<br>(Teaching Assistant)</h5>
+            <h5 class="center">SJSU</h5>
+            <p class="title">Teaching Assistant</p>
 
             <p class="light">
               <ul class="experience" >
@@ -107,14 +129,18 @@
           </div>
         </div>
 
+      </div>
+	  
+	    <!-- Experience Row 2-->
+      <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">desktop_windows</i></h2>
-            <h5 class="center">Computer Science<br>(Degree)</h5>
+            <h5 class="center">Computer Science</h5>
+            <p class="title">Masters Degree</p>
 
             <p class="light">
               <ul class="experience" >
-                <li>Masters in Computer Science</li>
                 <li>San Jose State University</li>
                 <li>May 2017</li>
               </ul>
@@ -122,14 +148,11 @@
           </div>
         </div>
 
-      </div>
-	  
-	    <!-- Experience Row 2-->
-      <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">terrain</i></h2>
-            <h5 class="center">CB&ampI<br>(Project Engineer)</h5>
+            <h5 class="center">CB&ampI</h5>
+            <p class="title">Project Engineer</p>
 
             <p class="light">
               <ul class="experience" >
@@ -145,11 +168,11 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Mechanical Engineering<br>(Degree)</h5>
+            <h5 class="center">Mechanical Engineering</h5>
+            <p class="title">Bachelors Degree</p>
 
             <p class="light">
               <ul class="experience" >
-                <li>Bachelors in Mechanical Engineering</li>
                 <li>Minor in Business</li>
                 <li>San Jose State University</li>
                 <li>May 2007</li>
