--- a/resume/index.html
+++ b/resume/index.html
@@ -74,7 +74,25 @@
       <h3 class="center">EXPERIENCE</h3>
       <!--   EXPERIENCE   -->
       <div class="row">
-        
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">scatter_plot</i></h2>
+            <h5 class="center">Accenture at Google</h5>
+            <p class="title">Global Ops Lead for <a href="https://developers.google.com/actions/">AoG</a></p>
+
+            <p class="light">
+              <ul class="experience" >
+                <li>Lead and provided oversight to 4 global teams in NA, APAC, and EMEA for 3 workflows</li>
+                <li>Championed process improvement projects and systems enhancements</li>
+                <li>Identified key metrics/measures to evaluate performance and impact of program</li>
+                <li>Collaborated across ecosystem by working with cross-functional teams, process strategists, and others similarly minded groups</li>
+              </ul>
+            </p>
+            <p class="light"><a href="https://gsuite.google.com/">G Suite</a></p>
+          </div>
+        </div>
+
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">assignment_turned_in</i></h2>
@@ -109,6 +127,11 @@
           </div>
         </div>
 
+      </div>
+	  
+	    <!-- Experience Row 2-->
+      <div class="row">
+        
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">account_balance</i></h2>
@@ -125,27 +148,7 @@
             </p>
             <p class="light">JIRA, Perforce, Eclipse, CRXDE, Adobe CQ</p>
           </div>
-        </div>
-
-      </div>
-	  
-	    <!-- Experience Row 2-->
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">school</i></h2>
-            <h5 class="center">SJSU</h5>
-            <p class="title">Teaching Assistant</p>
-
-            <p class="light">
-              <ul class="experience" >
-                <li>Class: Topics in Wireless Mobile Networking (CS 268) Spring 2017.</li>
-                <li>Development, instruction, and grading of laboratory assignments.</li>
-              </ul>
-            </p>
-            <p class="light">Docker, Nutanix Cloud, Slack, VirtualBox, Mininet, OpenDayLight, NS3</p>
-          </div>
-        </div>
+        </div>        
 
         <div class="col s12 m4">
           <div class="icon-block">
