--- a/resume/index.html
+++ b/resume/index.html
@@ -207,7 +207,7 @@
           <ul class="normal">
 		        <li><a class="white-text" href="http://www.linkedin.com/in/nathanwkong/">Linkedin</a></li>
             <li><a class="white-text" href="http://www.github.com/natekong/">GitHub</a></li>
-			      <li><a href="Nathan_Kong_Resume.pdf">Resume (PDF)</a></li>
+			      <li><a href="https://docs.google.com/document/d/1uQdSz2XIfdx6BlZogPCI34uDw2DZ5MpCw9aFjRlkfTg/edit?usp=sharing">Resume (PDF)</a></li>
             <li class="white-text">NateWKong@gmail.com</li>
           </ul>
         </div>
