--- a/resume/index.html
+++ b/resume/index.html
@@ -60,7 +60,7 @@
   	  <div class="container">
     		<h1 class="header center orange-text">Nathan Kong</h1>
     		<div class="row center orange-text">
-    		  <h5 class="header col s12 light">Always Evolving</h5>
+    		  <h5 class="header col s12 light">Agility and Vision</h5>
     	  </div>
 	    </div>
 	  </div>
@@ -207,7 +207,7 @@
           <ul class="normal">
 		        <li><a class="white-text" href="http://www.linkedin.com/in/nathanwkong/">Linkedin</a></li>
             <li><a class="white-text" href="http://www.github.com/natekong/">GitHub</a></li>
-			      <li><a href="https://docs.google.com/document/d/1uQdSz2XIfdx6BlZogPCI34uDw2DZ5MpCw9aFjRlkfTg/edit?usp=sharing">Resume</a></li>
+			      <li><a href="https://docs.google.com/document/d/1zwi0UoF7E2VERm3K9Rg9kUQGaQtNpAIrxb9SZ98hqqQ/edit?usp=sharing">Resume</a></li>
             <li class="white-text">NateWKong@gmail.com</li>
           </ul>
         </div>
