updated new descriptions

--- a/resume/index.html
+++ b/resume/index.html
@@ -74,13 +74,15 @@
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">scatter_plot</i></h2>
             <h5 class="center">Accenture at Google</h5>
-            <p class="title">Global Ops Lead for <a href="https://developers.google.com/actions/">AoG</a></p>
+            <p class="title">Global Operations Manager for <a href="https://developers.google.com/actions/">the Google Assistant</a></p>
 
             <ul class="light experience" >
-              <li>Lead and provided oversight to 4 global teams in NA, APAC, and EMEA for 3 workflows</li>
-              <li>Championed process improvement projects and systems enhancements</li>
-              <li>Identified key metrics/measures to evaluate performance and impact of program</li>
-              <li>Collaborated across ecosystem by working with cross-functional teams, process strategists, and others similarly minded groups</li>
+              <li>Lead and provided oversight to 100+ team members in 4 countries</li>
+              <li>Incubated and streamlined processes for application certification, technical support, quality review, quality control, technical writing, and data analytic
+workflows for 20+ languages 24 hours a day 5 days a week</li>
+              <li>Established KPIs, productivity metrics, utilization, and business reviews</li>
+              <li>Maximized business impact by assessing developer experience through data
+analytics of workflows in Salesforce and CSAT surveys</li>
             </ul>
             
             <i class="center light"><a href="https://gsuite.google.com/">G Suite</a></i>
@@ -92,15 +94,14 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">assignment_turned_in</i></h2>
-            <h5 class="center">Insight Global</h5>
-            <p class="title">Engineering Supervisor</p>
+            <h5 class="center">Insight Global at Pacific Gas and Electric</h5>
+            <p class="title">GPOM Engineering Manager</p>
 
             <ul class="light experience" >
-              <li>Compliance of Gas Assets for PG&ampE</li>
-              <li>Validation of Assets in SAP</li>
-              <li>Main Point of Contact with PG&ampE AMBBS Data Clean Supervisor</li>
-              <li>Coordination and organization of team schedules</li>
-              <li>Development of reports, project guides, and project charter</li>
+              <li>Lead and provided oversight to 35+ team members for implementation and
+quality assurance of asset management program into SAP</li>
+              <li>Served as SME for SAP and ProntoForms software</li>
+              <li>Developed Business reviews, SOPs, and project charter</li>
             </ul>
             
             <i class="center light">MS Project, Visio, Zoom, SAP, ProntoForms</i>
@@ -120,12 +121,14 @@
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">account_balance</i></h2>
             <h5 class="center">FindLaw</h5>
-            <p class="title">Internship</p>
+            <p class="title">Software Developer Intern</p>
             <ul class="light experience" >
-              <li>Project coordinating.</li>
-              <li>Migration of web content to Adobe CQ 5.6.1.</li>
-              <li>Development of web page and components.</li>
-              <li>Redirection of Legacy Domains.</li>
+              <li>Served as assist Scrum master to created, scheduled, and assigned tasks
+through Jira</li>
+              <li>Used Agile methodologies to collaborate with Engineering, Marketing, and
+Legal teams to ensure product schedule and vision was complete.</li>
+              <li>Migrated static web content from legacy system to a Content Management
+System.</li>
             </ul>
             <i class="center light">JIRA, Perforce, Eclipse, CRXDE, Adobe CQ</i>
           </div>
@@ -140,10 +143,11 @@
             <p class="title">Project Engineer</p>
 
             <ul class="light experience" >
-              <li>On-Site project management.</li>
-              <li>System design, commissioning, troubleshooting, and operations of treatment systems.</li>
-              <li>Testing and troubleshooting of logic controllers and control systems.</li>
-              <li>Development of operation manuals.</li>
+              <li>Lead and provided oversight to cross disciplinary projects and teams for
+Federal Services</li>
+              <li>System design, implementation, and operations of systems</li>
+              <li>Maintained reporting to Defense Energy Support Center, U.S. Department of
+the Navy, Bay Area Air Quality Management District, and Regional Water Quality Control Board. Reports included: Semi-annual Reports, Work Plans, Completion Reports</li>
             </ul>
           </div>
         </div>
