--- a/resume/index.html
+++ b/resume/index.html
@@ -35,14 +35,14 @@
       <ul class="right hide-on-med-and-down normal">
         <li><a href="https://www.linkedin.com/in/nathanwkong/">LinkedIn</a></li>
         <li><a href="https://www.github.com/natekong/">GitHub</a></li>
-        <li><a href="https://docs.google.com/document/d/1LsxSQgMbPXfJ3sXfwLSLRWPunjQno0jltnpAWLgMPPI/edit?usp=sharing">Resume</a></li>
+        <li><a href="resume/">Resume</a></li>
         <li><a href="#">NateWKong@gmail.com</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav orange lighten-2 white-text normal">
         <li><a href="https://www.linkedin.com/in/nathanwkong/">LinkedIn</a></li>
         <li><a href="https://www.github.com/natekong/">GitHub</a></li>
-        <li><a href="https://docs.google.com/document/d/1LsxSQgMbPXfJ3sXfwLSLRWPunjQno0jltnpAWLgMPPI/edit?usp=sharing">Resume</a></li>
+        <li><a href="resume/">Resume</a></li>
         <li><a href="#">NateWKong@gmail.com</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
@@ -77,7 +77,7 @@
             <p class="title">Global Operations Manager for <a href="https://developers.google.com/actions/">the Google Assistant</a></p>
 
             <ul class="light experience" >
-              <li>Lead and provided oversight to 100+ team members in 4 countries</li>
+              <li>Lead and provided oversight to 80+ team members in 4 countries</li>
               <li>Incubated and streamlined processes for application certification, technical support, quality review, quality control, technical writing, and data analytic
 workflows for 20+ languages 24 hours a day 5 days a week</li>
               <li>Established KPIs, productivity metrics, utilization, and business reviews</li>
