--- a/resume/resume/index.html
+++ b/resume/resume/index.html
@@ -13,21 +13,10 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <style>
-	.topPad{ padding-top: 30px; }
-  </style>
-  
-  
-  <!--  Scripts-->
-  <script src="js/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script>
-	$(document).ready(function(){
-		$('.parallax').parallax();
-	});
-  </script>
+  <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+ 
+
 </head>
 <body>
 
