--- a/resume/resume/index.html
+++ b/resume/resume/index.html
@@ -3,24 +3,40 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>N Kong Resume</title>
+  <title>Resume: Nathan Kong</title>
   
-  <link rel="apple-touch-icon-precomposed" href="images/favicon.ico">
+  <link rel="apple-touch-icon-precomposed" href="../images/favicon.ico">
   <meta name="msapplication-TileColor" content="#FFFFFF">
-  <meta name="msapplication-TileImage" content="images/favicon.ico">
-  <link rel="icon" href="images/favicon.ico" sizes="32x32" alt="images/faviconCopy.jpg">
-  <link rel="shortcut icon" sizes="196x196" href="images/favicon.ico">
+  <meta name="msapplication-TileImage" content="../images/favicon.ico">
+  <link rel="icon" href="../images/favicon.ico" sizes="32x32" alt="../images/faviconCopy.jpg">
+  <link rel="shortcut icon" sizes="196x196" href="../images/favicon.ico">
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <style type="text/css">
+    .iframe-container {
+      overflow: hidden;     
+      padding-top: 56.25%;
+      position: relative;
+    }
  
+    .iframe-container iframe {
+      border: 0;
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+    }
+  </style>
 
 </head>
 <body>
-
-<iframe src="https://docs.google.com/document/d/e/2PACX-1vTxrTfXjovtSdOkdNQMq19WyJMpjXmpTnXpGqx6NVe9xYUzEaiB0JqDR3YGpRJAJRBCiHtMr3ozjyKj/pub?embedded=true"></iframe>
+  <div class="iframe-container">
+    <iframe src="https://docs.google.com/document/d/e/2PACX-1vTxrTfXjovtSdOkdNQMq19WyJMpjXmpTnXpGqx6NVe9xYUzEaiB0JqDR3YGpRJAJRBCiHtMr3ozjyKj/pub?embedded=true" allowfullscreen></iframe>
+  </div>
 
 </body>
 </html>
