--- a/resume/resume/index.html
+++ b/resume/resume/index.html
@@ -30,6 +30,11 @@
       top: 0;
       width: 100%;
     }
+
+    /* 4x3 Aspect Ratio */
+    .iframe-container-4x3 {
+      padding-top: 75%;
+    }
   </style>
 
 </head>
